--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708932.md#1" target="_blank">河南爆新一轮非洲猪瘟 猪存栏量月减20%</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708932.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1145130224-150x120.jpg" align ="left"></a>“国泰君安”调研报告称，11月河南出现了新一轮一定规模的非洲猪瘟疫情。另有行业专家、猪肉流通商表示，疫情规模相对较小、零星发生，但均认可 “生猪存栏量月减15～20%”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708850.md#1" target="_blank">圣诞节前 港人心里话：愿2020年实现普选</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708850.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080600032478-600x399-1-150x120.jpg" align ="left"></a>香港示威游行已有6个月之久。12月8日，80万人再次走上街头，打着“追究警暴、捍卫人权、五大诉求、缺一不可”的横幅。在经历了半年的街头抗议后，港人有哪些心里话想说呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 11:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11707970.md#1" target="_blank">【翻墙必看】华为鲜为人知的内部运作秘密</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11707970.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/VCG31N1083191584-1-600x400-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.【内幕】华为把“狼文化”带入加拿大
+正值华为计划把其美国研究中心迁往加拿大之际，华为加拿大分公司（多伦多）的前雇员接受《大纪元》的采访，揭示了华为不为人知的内部运作情况，包括党支部的运作，以及公司内部激烈的竞争环境。
+
+2.桂民海瑞典获奖 中共驻瑞大使威胁制裁遭批
+中共驻瑞典大使桂从友周三（4日）在哥德.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/30/n11621371.md#1" target="_blank">【内幕】为何歼-10酷似F-16猎鹰战机</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/30/n11621371.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-453406375-150x120.jpg" align ="left"></a>中共歼10（J-10）战机又被称为猛龙，是中共单引擎喷气式战斗机机队的主要战机，与西方和俄罗斯第四代战斗机相当。但J-10与无所不在的美国F-16猎鹰战斗机（F-16 Fighting Falcon）十分相似。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706387.md#1" target="_blank">【直播回放】12.8国际人权日 80万人大游行</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080559132478-600x399-1-150x120.jpg" align ="left"></a>香港民阵周日（12月8日）发起“国际人权日”集会大游行，呼吁全民上街，继续向港府施压，“五大诉求 缺一不可”。游行已获警方不反对通知书。新唐人电视台和《大纪元时报》将进行全程追踪和网络直播。请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 8:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11701808.md#1" target="_blank">美6年接受逾30万UN难民 最多来自中国</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11701808.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/f840d48b6169d3812da4c35947420b4f-150x120.jpg" align ="left"></a>截至2018年底，联合国难民署估计有7480万流离失所者。自2013年以来增长74%以上，也是《联合国人权公约》连续第五年录得增长。而中共治下的中国是美国接收难民数量的最大来源国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 8:24 PM							</td></tr>
@@ -20,14 +29,11 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707612.md#1" target="_blank">猞猁咬死5只鸡被打死 两甘肃男获刑惹争议</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/lynx-988882_1920-150x120.jpg" align ="left"></a>一只野生保护动物猞猁，闯入甘肃祁连山一个养殖棚咬死五只鸡。两男子将猞猁打死，近日皆被判刑、罚款，舆论哗然，有网民表示：人不如动物？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707616.md#1" target="_blank">太平洋三国出台新措施 防中共干预选举</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/20171208-yang-Sydney-opera-house-GettyImages-504950684-150x120.jpg" align ="left"></a>从台湾到新西兰再到澳大利亚，太平洋地区多个政府已经制定新的法规或成立特别工作小组，以应对在未来大选中，中共通过各种手段进行干预。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707572.md#1" target="_blank">向心三年前已被台湾当局盯上 每月赴台一次</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dddfc73fed4622988dc481ba6d33afbb-600x400-1-150x120.jpg" align ="left"></a>卷入王立强叛逃风波的香港商人向心最近被台湾当局扣留。美媒披露，实际上，三年前向心已经被台湾当局盯上，其每次赴台都被密切监视。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707445.md#1" target="_blank">美参议员要求北京冬奥会执行人权保护新规</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707445.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/GettyImages-886288580-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>美国十位联邦参议员敦促国际奥委会提前实施2020奥运议程，让北京执行2022奥运《主办城市合约》的新规定，遵守人权保护的新标准。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:51 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707423.md#1" target="_blank">无处不在的人脸识别引发中国民众担忧</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140216591758-150x120.jpg" align ="left"></a>从机场安全线、超市结账台到街道摄像头，人脸识别无形中已渗透到中国民众日常生活的方方面面。本周生效的一项中共法规，更是引发民众对该技术所带来的隐私泄露的担忧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708036.md#1" target="_blank">京津冀多地持续阴霾天 航班高速路均受影响</a><br></h3>12月8日，河北南部、北京东南部、河南中东部、山东西北部等地的部分地区因重度阴霾影响，多处高速路段封闭，机场航班也被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11708050.md#1" target="_blank">四川男子双手发黑疑患血栓 医生：裤子掉色</a><br></h3>近日，四川泸州一名男子前往医院就诊，称自己双手突然发黑，认为自己患了血栓。医生让他用肥皂洗手两次后，他的皮肤恢复了正常，原来这是男子的裤子掉色所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11706911.md#1" target="_blank">遂宁小区疑似一氧化碳中毒事故 2死7住院</a><br></h3>12月8日，四川遂宁市安居区凤凰街道某小区发生一氧化碳中毒事件，导致2死、7人身体不适，已在医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11707999.md#1" target="_blank">深圳两幼童身上淤青不断 竟是皮肤内有虫</a><br></h3>最近，深圳两名小兄妹身上反复出现淤青，且每次淤青的位置都不定，于是被送往医院检查。据医生介绍，小兄妹被确诊为绦虫类囊虫病，虫子进入人体后在体内到处游走，导致皮出现结节和轻微淤青。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/8/n11707874.md#1" target="_blank">每日三退声明精选（2019/12/07）</a><br></h3>我“六四”时就想退出共产党，当时把党委的领导吓得够呛，硬劝结果没退成。因为家庭背景是高干，我对共产党看得很透了，也看了“九评共产党”。现在我声明退出入过的党团队一切共产党的组织，与邪恶彻底决裂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707704.md#1" target="_blank">业绩差 南宁一公司多名员工穿内裤寒风中罚站</a><br></h3>近日广西南宁最低气温约10℃，有市民看到，在当街有几名男子只穿着内裤，站在寒风中瑟瑟发抖，还有人拿着棍子在旁边训话。据悉是某传媒公司的员工因业绩差而遭罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 7:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707358.md#1" target="_blank">桂民海瑞典获奖 中共驻瑞大使威胁制裁遭批</a><br></h3>中共驻瑞典大使桂从友周三（4日）在哥德堡大学参加活动时，宣称因瑞典早前颁奖给目前羁押在大陆的书商桂民海，中共在文化领域之外将再对瑞典实施贸易制裁。目前瑞典外交部还未收到中方正式制裁通知，有瑞典学者透露，瑞典已向欧盟发出反制中共请求。有评论人士认为，桂从友是中共粗鄙和“讹诈式外交”的代表。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iqwytd266/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iqwytd266/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
