--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -5,7 +5,21 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11711261.md#1" target="_blank">青松絮语：免费理发</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11711261.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/kite-150x120.jpg" align ="left"></a>拖着厚重的面子，我们畏首畏尾，对正常的社会交换也感到胆怯。如果抛却那种种顾虑，坦坦荡荡面对一切，既能真诚待人，又能豁达行事，对“免费理发”这样的事也不心生排斥，岂不是更好吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11710880.md#1" target="_blank">散落人间的文字：雨夜的花蕊</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11710880.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/a9d60b2945414dc9d2c3d584ddd70c2c-150x120.jpg" align ="left"></a> 雨夜花雨夜花 受风雨吹落地 无人看见瞑日怨嗟 花谢落土不再回 花落土花落土 有谁人倘看顾 无情风雨误阮前途 花蕊若落要如何......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11690587.md#1" target="_blank">轮回中“我是谁”？前世为僧 今生为官</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/29/n11690587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1901091505412483-150x120.jpg" align ="left"></a>前世他是僧人，因一领袈裟结下今世夫妻之缘；他前世是独眼僧，今世成为一代文豪，屡遭贬官，忘却荣辱；他今世是太守，却被友人戏称为“行脚僧”。迥然不同的二世风貌，原来都是自己。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 5:59 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11709836.md#1" target="_blank">水的归属</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11709836.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180227015026100093-150x120.jpg" align ="left"></a>上天恩赐的水源，滚滚浊水阳光下闪着银光，奔流河川，灌注辽阔田地，恩养世代子民，是岛屿农乡的血脉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11709836.md#1" target="_blank">水的归属</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11709836.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/180227015026100093-150x120.jpg" align ="left"></a>上天恩赐的水源
+
+滚滚浊水阳光下闪着银光
+
+奔流河川，灌注辽阔田地
+
+恩养世代子民
+
+是岛屿农乡的血脉
+
+1
+
+桌面上摊开一幅台湾地图，图上显示的，只是几条水蓝曲线，绘在绿、黄、褐色泽交混的平面上，梭形的岛屿包围在蓝色汪洋之间；在世界的大版图上，台湾岛屿只是欧亚大陆板块边陲上的一个小点。
+
+.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/9/1/n11491897.md#1" target="_blank">【医案】五里迷雾</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/9/1/n11491897.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190813024731100093-150x120.jpg" align ="left"></a>现代医学随着科技的发达，把疾病的病因、发展过程、愈后都研究得有条有理，医学浩瀚，可是就有不按医理进展的病情，是不是医学遗漏了什么重要物质？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 10:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/12/10/n1937466.md#1" target="_blank">艺术的时空之旅（八）传统油画技法探究（一）</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/12/10/n1937466.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/201910231-150x120.jpg" align ="left"></a>针对已有相当的基本功的画家而言，在创作过程中的种种技法应该自由、灵巧地运用，而不应被已形成的技法框框阻碍住自我的主念。因为在表现美好光明的道路上，技法是为真正的艺术而创造的，而不应该以技法为主从而阻碍艺术家对艺术的表达。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:49 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/1/n11692633.md#1" target="_blank">天地清明引(131) 明光殒－班师回朝3</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/1/n11692633.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/MokoShuraiE-Kotoba_I-150x120.jpg" align ="left"></a>三人骑马出城，不至半刻，便见长堤之上，人山人海，人人手执白花，投入河中，转眼之间，河面尽是白花，一眼望不到边际。土丘之上，只见一人，宣读悼文，悲痛满怀，憾恨不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:00 AM			</td></tr>
