--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704968.md#1" target="_blank">【思想领袖】中共内部承认正走向解体（二）</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Interview-150x120.jpg" align ="left"></a>英文《大纪元时报》资深记者杨杰凯（Jan Jekielek）近日在“美国思想领袖”节目中，对美国的中国问题专家、宾夕法尼亚大学国际关系和中国历史教授林蔚（亚瑟?沃尔德伦，Arthur Waldron）进行了专访。全文翻译如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 6:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704884.md#1" target="_blank">狙击689：华为251事件和香港反修例运动</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704884.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/19-12-045-150x120.jpg" align ="left"></a>这几天网络上沸沸扬扬都是华为251事件，华为员工李洪元举报上司虚报营业额而遭上面报复“劝退”。当他跟人事部门谈好离职条件并签妥文件后，竟被华为控告勒索而拘留了251天，最后因他在跟华为人事部门会话时为保护自己，偷藏录音笔纪录了会话内容才被释放，并获发出《国家赔偿决定书》赔偿10万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704767.md#1" target="_blank">洪微：川普新一轮关税又箭在弦上</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704767.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MU0OC-600x400-1-150x120.jpg" align ="left"></a>距离12月15日越来越近，美中贸易第一阶段协议，没有明显的签署迹象。美国商务部长罗斯最近表示，如果没有协议，针对1560亿美元中国进口商品的15%关税，将在12月15日如期实施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:47 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707614.md#1" target="_blank">宁静：刘三姐到底是“歌仙”还是红卫兵？</a><br></h3>看过电影《刘三姐》的，一定会被影片一开始的画面所吸引，只见青山绿水间，小舟正在清澈见底的河面上捕鱼，鱼鸥在水面翻腾往来，把鱼送给船头站立着的老翁，这时美丽的歌声从远处顺着江水传来，远远望去，一位美丽的姑娘如同天仙一样飘来，你的心中会自然而然的生出一念，这是神仙来了吗？她就是歌神刘三姐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704636.md#1" target="_blank">李铭：中共酷刑灭绝人性 无法撼动正信</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704636.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/g-1-600x400-150x120.jpg" align ="left"></a>中共一贯以种种酷刑，对非法关押的法轮功学员进行所谓“转化”，配合精神迫害，妄图让法轮功学员放弃修炼，写下放弃信仰、出卖灵魂的所谓“三书”（保证书、决裂书、揭批书）。近期媒体披露的两则报导，印证了中共迫害法轮功的残酷严峻，尽显其灭绝人性的本质，细节让人不忍卒读。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11707550.md#1" target="_blank">张林：贸易战中美经济对比天壤之别</a><br></h3>美国劳工部周五称，11月份全国增加了266,000个工作岗位，这个增长速度，仅次于今年1月份312,000个工作岗位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 4:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/7/n11706853.md#1" target="_blank">理悟：贺美总统签署香港法案后各国跟进立法</a><br></h3>一花引来百花开，寒梅傲雪报春来。
 冰融霜消残冬尽，万紫千红看精彩。
