--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703476.md#1" target="_blank">【三国英雄】之七：诛杀国贼董卓</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7-3-150x120.jpg" align ="left"></a>面对国贼董卓，只有曹操和孙坚敢于放下自身利益，向董卓进攻，曹操在汴水被打得大败，那么另外一个讨董英雄孙坚又将如何呢？华雄又是被谁杀的呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 12:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/11/7/n2715084.md#1" target="_blank">祖母的话：天上有眼睛看着呢</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/11/7/n2715084.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/11/09050921582710003-150x120.jpg" align ="left"></a>(shown)奶奶经常和我们说，做人要重德，要有良心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 9:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/3/30/n1663167.md#1" target="_blank">漫谈中国舞：天竺乐</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/3/30/n1663167.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sunset-2173918_1920-150x120.jpg" align ="left"></a>古代的天竺指的就是今天的印度，唐时将从那里传来的乐舞称为《天竺乐》。《天竺乐》舞大概在公元350年左右传入中原。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:58 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/27/n11685387.md#1" target="_blank">苏东坡入梦赠诗  取字缅先贤</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/27/n11685387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/getCollectionImage-150x120.jpg" align ="left"></a>梦，一直是个神秘的话题。因为在梦中，有人神游天堂，有人游历地狱。有人从梦中获得技能，有人从梦中看见未来。这里为大家介绍二则苏东坡托梦的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:50 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11711098.md#1" target="_blank">七律：陀螺</a><br></h3> 河冰初厚打陀螺， 鞭子抡圆脆响多。 嬉戏之人求热汗， 飞旋螺哨送欢歌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11711055.md#1" target="_blank">五律：雾</a><br></h3>海市横空出，蜃楼摇地斜。 众芳隐深幕，高影透轻纱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:56 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11711048.md#1" target="_blank">台湾古典诗：中美贸易战（二）</a><br></h3>美中谈判鬼胎怀，烽火延烧伏笔埋， 宝岛深耕冲击少，全球贸易扫阴霾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/9/n11711045.md#1" target="_blank">新诗：笔织</a><br></h3>笔织， 穿梭于岁月， 用缘缝制天衣。 把时光凝固在诗里， 雕塑世界， 筑梦星空。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:47 PM			</td></tr>
