--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -16,7 +16,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank">中国最大掩埋场提前25年填满 焚垃圾毁生态</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11496599839-150x120.jpg" align ="left"></a>陕西省西安市的全国最大垃圾掩埋场原设计要撑到2044年，但由于每天1万吨垃圾的涌入，已提前25年被塞满。现大举兴建焚化炉， 但垃圾焚烧会断送中国生态的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 2:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/15/n11659394.md#1" target="_blank">【名家专栏】导弹防御是美安全新基石（上）</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/15/n11659394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1261QN-150x120.jpg" align ="left"></a>本文将探讨两个非常重要的问题。首先，能否在削减核武器的同时部署导弹防御系统？ 其次，有限的导弹防御系统能否可靠地抵御核导弹威胁？ 我对这两个问题的回答都是“能！”但同时，也有一个很重要的警告：如果俄罗斯和中共都把有限导弹打击威胁作为自己的战略，那么美国的导弹防御系统需要继续得到改进，就能够可靠地抵御这种威胁。此外，其它的很主要的威胁也依然存在，为此，美国方面.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 8:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/16/n11659677.md#1" target="_blank">神韵2020全球巡演 首场纽约州12/20拉开帷幕</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/16/n11659677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7c1262cfc3111d09241f51c5cd6944ac-150x120.jpg" align ="left"></a>神韵2020全球巡演的首场演出，将在今年12月20日在纽约州帕切斯市（Purchase）和加州伯克利（Berkeley）同时拉开帷幕。随后，将有同等规模大小的七个艺术团与艺术团乐团在全球同步演出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 12:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/15/n11658692.md#1" target="_blank">大陆医美行业乱象丛生 致残致死案例频发</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/15/n11658692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d762ef57d33dfb_ttl7dayLJO_VCG111220651613-150x120.jpg" align ="left"></a>近年来中国医疗美容行业爆发式增长，同时乱象丛生，近年来，医美行业相关投诉却增加了10倍多，因医美致残、致死案例不断发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 1:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/23/n11675439.md#1" target="_blank">每日三退声明精选（2019/11/22）</a><br></h3>不再被共党邪灵蒙蔽，共产党满口“伟光正、假大空”，所作所为却都是欺骗与迫害老百姓为害人类，天灭中共，没有共产党才有民主中国！才有每一个家庭的安全与幸福！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 10:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/22/n11673018.md#1" target="_blank">每日三退声明精选（2019/11/21）</a><br></h3>十年前我第一次开始了解中共统治真相后一直忍气吞声默默忍受着，但现在看到中共在新疆、在香港以及对宗教律师团体的残酷迫害，我无法允许自己在沉默下去，在此我声明退出参加加入的中共少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/21/n11670314.md#1" target="_blank">每日三退声明精选（2019/11/20）</a><br></h3>自共匪邪教建政一来一直被共匪思想洗脑，到现在才彻底看清红色暴政，看到大陆?层受尽压迫和财产剥夺，香港民主运动无人性的暴力血腥震压心里说不出什么滋味，一个卖国的邪党还天天叫人民爱党爱国变态至极，自己思想卖国引进马列思想，行为卖国送掉中国无数国土还残杀无数中国人民，真是人间魔鬼，早晚会下地狱，为了远离邪恶，我申请退出小时候不知加入的少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 10:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/20/n11667707.md#1" target="_blank">每日三退声明精选（2019/11/19）</a><br></h3>中共暴行甲天下，戾暴恶行人人骂。
