--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -24,7 +24,7 @@
 
 
 周六上午，大洛杉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 3:21 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/8/n11575403.md#1" target="_blank">法轮功横滨游行 日民众积极连署举报江泽民</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/8/n11575403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/DSC02601-150x120.jpg" align ="left"></a>10月6日日本部分法轮功学员汇集在国际都市横滨，举行声援3亿4千万中国同胞声明退出中共组织的游行活动，同时呼吁民众连署举报迫害法轮功的元凶江泽民。一路中，有不少民众和游客给予签名，表明连署举报迫害元凶江泽民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月08日 3:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11646787.md#1" target="_blank">每日三退声明精选（2019/11/10）</a><br></h3>我过去被中共欺骗，蒙骗过。但是我不光光看到他们虚伪的嘴脸，而且也看到了后来他们企图消灭人类自由的邪恶计划，尤其是中共前宗教局局长的事情让我更加对他们感到厌恶和气愤。我也回想了自己以前被中共洗脑的东西，其实感觉得到自己是被强迫的，自己心里也不认同这些东西。我是相信基督的，我决定在这里公开退出共产党、退出共青团和退出少先队，永远抛弃共产邪说，摆脱邪灵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月11日 11:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/9/n11643329.md#1" target="_blank">每日三退声明精选（2019/11/08）</a><br></h3>我并非不理解那种功利的选择考虑，而是对共产党怀有一种强烈的抵触甚至恐惧。反右，大饥荒，文革，六四，我不能理解一个口口声声宣称代表最广大人民根本利益的党怎能视生命如草芥，频繁对人民亮出屠刀，亲手制造一处处人间地狱？党是上一代人命里的劫，是很多前辈终生的噩梦。但我希望乌云能就此散去，至少让我们救救孩子……最后，在此我宣布退出z中学时加入的共青团组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月09日 10:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/8/n11641035.md#1" target="_blank">每日三退声明精选（2019/11/07）</a><br></h3>从小的时候就听共产党的教育，后来到了中学时期，从中共的腐败的的事情看出这个政权完全是欺骗这片土地上的人们的伪政权，在私下里拜访过受中共迫害的人，才知这个政权岂止是劣迹斑斑，简直就是罪恶滔天、罄竹难书、人神共愤。现声明与中共势不两立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 11:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/6/n11636744.md#1" target="_blank">参考资料：纵观天下（2019年11月传单/传真）</a><br></h3>纽约金秋大游行 华人踊三退 证人披露活摘器官黑幕 退团 退队 互联网大会 与会者翻墙成奇观 中共“老区”退党潮 洗脑教育害少儿......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 3:27 PM							</td></tr>
