--- a/gb/ncid277_3.md
+++ b/gb/ncid277_3.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank">2021年全球监控摄像头达10亿 过半在中国</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706046.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1166233093-150x120.jpg" align ="left"></a>一份新的报告显示，到2021年，全球将有数以10亿的摄像头在监视这个世界，其中一半以上位于中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705611.md#1" target="_blank">世银放贷给中共 美议员：一元都太多</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705611.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e84b106995f1b8100e98b809b38fd5c4-150x120.jpg" align ="left"></a>中国已成长为世界第2大经济体，但世界银行（World Bank）周四（12月5日）依然宣布，通过了对中国5年的低利率贷款计划，每年将会贷款给中国10亿至15亿美元（约新台币305亿至457.7亿元）。此举引发国会反弹，美国财政部长梅努钦（Steven Mnuchin）表示，中国不应该继续接受优惠贷款计划。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 3:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706070.md#1" target="_blank">库德洛：协议若无执行保证 川普会“走开”</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11706070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LX2NM-150x120.jpg" align ="left"></a>白宫首席经济顾问拉里·库德洛（Larry Kudlow）周五（12月6日）表示，美中两国已“接近”达成贸易协议，但如果川普（特朗普）政府没有在协议中得到他们想要的条款，美方已经准备好走开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 1:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705893.md#1" target="_blank">犯涉黑等五罪 内蒙电视台前台长获刑18年</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705893.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/zhao-chuntai1-150x120.jpg" align ="left"></a>中共内蒙古广播电视台前党委书记、台长赵春涛近日一审以受贿、巨额财产不能说明来源、包庇纵容黑社会组织、单位受贿、故意伤害等五罪被判有期徒刑18年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705859.md#1" target="_blank">京剧演员姜亦珊自缢身亡 传其丈夫被查</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e9971036f3744bceaf08da49540ffd7e-150x120.jpg" align ="left"></a>年仅41岁的中国国家一级演员、北京市政协常委、著名京剧演员姜亦珊周四（5日）在家中自缢身亡，消息引发轩然大波。同时有消息指其丈夫遭清洗，京剧名家袁慧琴的丈夫也被波及，但迄今为止京剧界都对此噤若寒蝉不敢置评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705789.md#1" target="_blank">高盛：中国料下调2020经济增长至6%左右</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705789.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/88ef826d58a48fe5d608abd35a426096-150x120.png" align ="left"></a>高盛集团（Goldman Sachs Group Inc.）分析认为，中共当局可能会将其2020年经济增长目标下调至“6％左右”，这将使决策者有余地应对增长放缓的趋势。此外，北京也可能会上调明年通货膨胀率的门槛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705623.md#1" target="_blank">中方将豁免部分美国大豆和猪肉进口关税</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705623.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/a9932408ed3c6fbeeed2ab7a67e34473-150x120.jpg" align ="left"></a>中共官方周五（12月6日）公布，中方将豁免部分美国进口大豆和猪肉的报复性关税。彭博社称，此举可能意味着中美正接近达成一份更广泛的贸易协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704260.md#1" target="_blank">【翻墙必看】传知晓核心秘密 华为有员工失踪</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704260.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/58944cb3e99425dd0d5705ff6f45e0ef-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
 
 1.【内幕】华为打压多名员工 或涉及核心秘密
@@ -27,26 +34,6 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703525.md#1" target="_blank">蓬佩奥访问葡萄牙：与华为合作带来风险</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703525.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186559421-150x120.jpg" align ="left"></a>美国国务卿迈克·蓬佩奥（Mike Pompeo）于周四（12月5日）在里斯本向记者表示，在“过去两年里”，美国在努力确保其全球合作伙伴意识到与华为等公司合作的风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703260.md#1" target="_blank">美媒：629名巴基斯坦女子被贩到中国当新娘</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703260.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1148931765-150x120.jpg" align ="left"></a>一张又一张的白纸上堆满了名字：来自巴基斯坦各地的629名女孩和妇女被卖到中国作新娘，屡屡雪上加霜，境遇凄惨。整理该清单的巴基斯坦调查人员决心破获这个将该国穷人和弱势群体作为贩卖对象的犯罪网络。没想到，他们调查的脚步却因两国之间“有利可图的”关系而被迫停止。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703466.md#1" target="_blank">鸡西集团欠薪1年 媒体人下班卖苹果帮搓澡</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703466.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/photo-150x120.jpg" align ="left"></a>有鸡西新闻传媒集团职工表示，集团已拖欠其11个月工资，为了生活，想通过帮助亲戚分销苹果的方式缓解压力，希望大家能够惠顾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703283.md#1" target="_blank">呼和浩特中院前院长受审 被控受贿逾两千万</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703283.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dongbinghui-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>中共内蒙古呼和浩特市中级法院前党组书记、院长董秉惠（副厅级）日前出庭受审，其被指控2200余万元，贪污160万元。此前，董秉惠曾被指知法犯法，以案谋私等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11702873.md#1" target="_blank">阻敌对势力干预民主 台立委：中共是唯一敌人</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11702873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9839d7646fa0de593ea1c514af02ef64-150x120.jpeg" align ="left"></a>民进党团将“反渗透法”草案单独迳付二读，因此立院内政委员会国民党籍召委林为洲5日提案排审多个相关法案，其中，民进党立委王定宇表示，在他所提的《两岸条例》修正案中，是规范“行为”，台商及两岸正常交流皆不受影响；他也强调，“敌人只有一个就是中共”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703314.md#1" target="_blank">港律政司司长郑若骅 被“绑架”回北京？</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703314.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-1-150x120.jpg" align ="left"></a>香港律政司司长郑若骅上月在伦敦被抗议者包围时跌倒，直至12月3日才回港，称自己是被驻英大使馆安排回北京治疗。但现居流亡海外的中国富豪郭文贵爆料，郑若骅在英期间并为打算回香港，但之后被中共胁迫，被迫以“治疗”为名搭专机到北京与中共领导会面，形容郑实际是“被绑架回京”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11701864.md#1" target="_blank">【翻墙必看】陆民众喊时代革命 中共噩梦来了</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11701864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-12-023.30-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.【新闻看点】接连受重击 北京最大噩梦要来了
-最近中共接连遭受重击，国际社会几乎形成了联动，纷纷针对中共出台各项措施。在国内，广东茂名村民经过3天勇武抗争，终于迫使当局公开让步道歉。这是中共篡政70年来第一次向民众“磕头让步”，也是香港民众反极权民主抗争在大陆蝴蝶效应的展现。
-
-2.美专家：若消息属实 向心.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 9:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11701957.md#1" target="_blank">【内幕】华为打压多名员工 或涉及核心秘密</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11701957.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1905241928522384-150x120.jpg" align ="left"></a>华为李洪元事件后，再有知情人爆料，其被抓可能是因知晓华为违反美国禁运令的核心秘密。该知情人表示，还有其他员工被抓或被失踪至今。
-李洪元事件或涉违反禁运核心秘密
-中国公益机构“长沙富能”联合创办人杨占青，因曾与部分华为离职员工在一个微信群组，故而了解一些华为事件的内幕。
-
-他告诉大纪元，李洪元的罪名从“泄露商业机密”转为涉嫌“敲诈勒索”，很有可能因为其.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11702852.md#1" target="_blank">新疆兵团下辖183团退休党委书记晏忠诚被查</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11702852.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1511012105372382-600x400-1-150x120.jpg" align ="left"></a>12月5日，中共新疆生产建设兵团第十师183团前党委书记、政委晏忠诚被调查。
-
-中共新疆生产建设兵团纪监委5日消息：中共新疆生产建设兵团第十师183团前党委书记、政委晏忠诚涉嫌严重“违纪违法”，正被审查和监察调查。
-
-晏忠诚，1960年5月出生，陕西白河人，1978年至2009年，历任农十师181团青年2连班长，二营八连职工、副连长、指导员、连长、一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:21 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11702539.md#1" target="_blank">工行前高管被逮捕 传潜规则32名女下属</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11702539.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/gu-guoming-150x120.jpg" align ="left"></a>大陆工商银行上海市分行原党委书记、行长顾国明涉嫌受贿一案，移送检方起诉。近日，顾国明被以涉嫌受贿罪逮捕。其被指涉嫌受贿犯罪，数额特别巨大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705484.md#1" target="_blank">陕西官场持续地震 华阴政法委前书记被双开</a><br></h3>12月6日陕西官方消息称，日前，渭南华阴市委前常委、政法委书记权渭阳被立案审查调查，并被双开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11705142.md#1" target="_blank">受贿千万 山东前统战副部长马啸被判11年半</a><br></h3>12月6日，中共山东省政协前常委、省委统战部前副部马啸受贿案宣判，其被控受贿1200余万元（人民币），被判有期徒刑11年6个月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703304.md#1" target="_blank">中国社科院金融所书记被查 曾任中纪委检查员</a><br></h3>中国社会科学院金融研究所党委书记、副所长王立民，日前被查。他被指“颇具背景”，曾在中共中央纪委、重庆任职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:08 AM							</td></tr>
