--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -18,6 +18,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11648878.md#1" target="_blank">滴滴司机刀捅乘客 扬言“我舅是公安局长”</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11648878.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/didi-150x120.jpg" align ="left"></a>大陆网约车“滴滴顺风车”再曝丑闻，刘姓司机用刀捅伤乘客后，还扬言“我舅舅是公安局长”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 4:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11647388.md#1" target="_blank">长沙9岁童遭陌生男打死 百人围观</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11647388.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/IMG_9162-150x120.jpg" align ="left"></a>日前，湖南长沙市雅塘村汇城上筑小区发生的9岁男童罗棋被打死事件有新进展，大陆媒体还原了事发时的细节情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月11日 11:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/10/n11646016.md#1" target="_blank">【名家专栏】老兵节上一段触动心弦的回忆</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/10/n11646016.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/veterans-new-york-1200x800-150x120.jpg" align ="left"></a>11月11日是美国退伍军人节或退伍军人纪念日（Veterans Day），也是美国联邦假日，俗称老兵节。这是美国一个重要的全国性节日，全美各地的人们会在该日举行游行等庆祝活动，借此向退伍军人、特别是参加过历次战争的退伍军人表达敬意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月11日 10:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/16/n11659775.md#1" target="_blank">川男7000元做结扎手术 4个月后妻怀孕</a><br></h3>四川崇州市一男子在蜀都医院花费7000多元做男性结扎手术，结果其妻子4个月后怀孕，做手术的医院被投诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 2:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/15/n11657048.md#1" target="_blank">每日三退声明精选（2019/11/14）</a><br></h3>在全球关注香港人民捍卫民主自由运动的时刻，我们越来越看清了中共的邪恶。回想到八九六四及镇压法轮功，中共使用的一切镇压手段如出一辙。一个政府，一个政权靠谎言、欺骗等流氓手段镇压正义与良知，这在历史上是绝无仅有的...... 。我们不与邪恶为伍，退出年少时期加入的少先队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 10:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/14/n11654455.md#1" target="_blank">每日三退声明精选（2019/11/13）</a><br></h3>被中共长期欺骗、高压管控的国民，从未真正地拥有过面包和自由。吃一口饭却要交半口税，透支几代人的积蓄才买得起的房产，70年后却很可能成为中共“国有”。好不容易成了富豪，也得向中共俯首称臣，接受其管控。德利看透了邪党的流氓邪教本质，在此宣誓退出邪党的共青团和少先队组织不给邪党陪葬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/13/n11651894.md#1" target="_blank">前加情报局长：加拿大需将中俄视为“敌手”</a><br></h3>一名担任过不同政府总理安全顾问的情报专家发出警告，加拿大需要对中、俄两国构成的威胁有清醒的认识。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 7:18 AM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/12/n11649670.md#1" target="_blank">每日三退声明精选（2019/11/11）</a><br></h3>我们知道了必须退队的原因，最近香港被大陆(中共)害的好惨，我老公是逃港人员，我每天祈祷老天保佑香港。感谢法轮功讲真话，法轮大法好！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 12:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/12/n11649443.md#1" target="_blank">云南男子闯幼儿园喷氢氧化钠液体 伤54人</a><br></h3>11月11日，云南开远市一男子进入开远市东城幼儿园，用自制的氢氧化钠液体，喷向幼儿园师生，导致部分师生被灼伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 10:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11649034.md#1" target="_blank">玻利维亚总统辞职 川普：向委内瑞拉释信号</a><br></h3>美国总统川普（特朗普）周一（11月11日）发表声明表示，玻利维亚总统辞职是西半球民主的重要时刻，并向委内瑞拉和尼加拉瓜等“非法政权”发出信号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 5:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/11/n11646787.md#1" target="_blank">每日三退声明精选（2019/11/10）</a><br></h3>我过去被中共欺骗，蒙骗过。但是我不光光看到他们虚伪的嘴脸，而且也看到了后来他们企图消灭人类自由的邪恶计划，尤其是中共前宗教局局长的事情让我更加对他们感到厌恶和气愤。我也回想了自己以前被中共洗脑的东西，其实感觉得到自己是被强迫的，自己心里也不认同这些东西。我是相信基督的，我决定在这里公开退出共产党、退出共青团和退出少先队，永远抛弃共产邪说，摆脱邪灵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月11日 11:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iqwytd266/djy/blob/master/gb/ncid282_5.md#1<br><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid282_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iqwytd266/djy/blob/master/gb/ncid282_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_5.htm">http://www.epochtimes.com/gb/ncid282_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
